fix gap between navbar and body

--- a/src/files/client/custom/modules/dubas-dark-theme/frontend/less/dubas-dark/custom.less
+++ b/src/files/client/custom/modules/dubas-dark-theme/frontend/less/dubas-dark/custom.less
@@ -48,7 +48,7 @@ body[data-navbar="side"] #navbar .navbar .navbar-form.global-search-container {
     border-bottom: 1px #999 solid;
 }
 
-div#main {
+body[data-navbar="side"] div#main {
     margin-top: 5%;
 }
 
